Updating modification for Soft Launge