@@ -24,7 +24,6 @@
 		<testSourceDirectory>src</testSourceDirectory>
 		<plugins>	
 		
-
 		 <!-- 
 	      <plugin>
 	        <groupId>org.codehaus.mojo</groupId>
@@ -45,6 +44,7 @@
 	        </executions>
 	      </plugin>
 		 -->
+		 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -57,10 +57,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
-				<configuration>
-					<includes>
 
+				<version>2.20</version> 
+				<!-- 
+				<version>2.21.0</version>
+				 -->
+				
+				<configuration>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+										
+					<includes>
+						
 						<!-- Sprint 3 <include>com/litmus7/tatcha/jscripts/selenium/myaccount/MyAccount_MOC_16.java</include> 
 							<include>com/litmus7/tatcha/jscripts/selenium/myaccount/AddressBook.java</include> 
 							<include>com/litmus7/tatcha/jscripts/selenium/myaccount/PaymentOptions.java</include> 
@@ -68,27 +75,78 @@
 							<include>com/litmus7/tatcha/jscripts/selenium/login/MyLoginWithFB.java</include> 
 							<include>com/litmus7/tatcha/jscripts/selenium/login/Register.java</include> 
 							<include>com/litmus7/tatcha/jscripts/selenium/login/RegisterWithFB.java</include> 
-							<include>com/litmus7/tatcha/jscripts/selenium/navigation/GlobalNavigation_HeaderLinks_MOC_33.java</include> 
+							
+							
 							<include>com/litmus7/tatcha/jscripts/selenium/navigation/GlobalNavigation_FooterLinks_MOC_39.java</include> -->
 
 						<!-- Sprint 3 -->
-							 
-						<include>com/litmus7/tatcha/jscripts/selenium/sprint3/Login.java</include>							
-						<include>com/litmus7/tatcha/jscripts/selenium/navigation/GlobalNavigation_HeaderLinks_MOC_33.java</include> 
-						<include>com/litmus7/tatcha/jscripts/selenium/navigation/GlobalNavigation_FooterLinks_MOC_39.java</include> 
+						<!-- 	 
+						<include>com/litmus7/tatcha/jscripts/selenium/sprint3/Login.java</include>	
+																		
+						<include>com/litmus7/tatcha/jscripts/selenium/login/MyLogin.java</include> 
+						<include>com/litmus7/tatcha/jscripts/selenium/login/MyLoginWithFB.java</include> 
+						<include>com/litmus7/tatcha/jscripts/selenium/login/Register.java</include> 
+						<include>com/litmus7/tatcha/jscripts/selenium/login/RegisterWithFB.java</include> 			
+						-->
+						<include>com/litmus7/tatcha/jscripts/selenium/navigation/Test_Header.java</include> 
+						<include>com/litmus7/tatcha/jscripts/selenium/navigation/Test_Footer.java</include> 
 							
 						<!-- Sprint 4 -->	
-						
-						<include>com/litmus7/tatcha/jscripts/selenium/sprint4/AddToCartGuestUser.java</include>
-						
-						
+						 <!--
+						<include>com/litmus7/tatcha/jscripts/selenium/sprint4/AddToCartGuestUser.java</include> --><!--  shopping bag  -->
+						 
 						<!-- Sprint 5 -->
-						<include>com/litmus7/tatcha/jscripts/selenium/sprint5/AddToCartGuest.java</include>
+						<!--
+						<include>com/litmus7/tatcha/jscripts/selenium/sprint5/AddToCartGuest.java</include> 
+						-->
 						
+						<!-- Sprint 6 -->
+						 <!--	<include>com/litmus7/tatcha/jscripts/selenium/sprint6/AddItemToCart.java</include>    -->
+						
+						<!-- AddToCartLoginCheckout  -->
+						<!-- AddToCartGuestCheckout  -->
+							
+						<!-- Sprint 7 -->
+						<!-- ProductLisingPage  -->
+						
+						<!-- XLT Load Test Scripts -->
+						<!-- com.litmus7.tatcha.jscripts.xlt.Sprint3Register.java -->
+						<!--
+						<include>com/litmus7/tatcha/jscripts/xlt/fullflow/GuestFlow.java</include> 
+						-->
+						
+						<!--
+						Login Sprint3
+						AddToCartLoginCheckout Sprint6
+						AddToCartGuestCheckout Sprint6
+						
+						-->	
 					</includes>
 					<systemPropertyVariables>
 						<!-- Relocate the XLT results directory under target. -->
 						<com.xceptance.xlt.result-dir>${project.build.directory}/xlt-results</com.xceptance.xlt.result-dir>
+						
+			            <!--  <test.type>load.xlt</test.type>      -->
+			             <test.type>browser.chrome</test.type>  
+			             
+			             <base.url>http://development-na01-tatcha.demandware.net/s/tatcha/home?lang=default</base.url>	  
+			             <work.env>dev</work.env>	    
+			             <!--    
+			             <work.env>staging</work.env>	
+						 <base.url>http://staging-na01-tatcha.demandware.net/s/tatcha/home?lang=default</base.url> 
+						 
+						 <work.env>demo</work.env>
+						 <base.url>http://demo-na01-tatcha.demandware.net/on/demandware.store/Sites-tatcha-Site</base.url> 
+						 
+						 <work.env>prod</work.env>	         
+					     <base.url>http://production-na01-tatcha.demandware.net/s/tatcha/home?lang=default</base.url>
+					     			             
+					     <work.env>prev</work.env>	  	
+						 <base.url>https://preview.tatcha.net/</base.url>
+						 
+						 <work.env>live</work.env>	  	
+						 <base.url>http://www.tatcha.com/</base.url>
+			             -->
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
